--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,4 +40,5 @@
   src="{{ site.baseurl }}/assets/js/jquery-3.3.1/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+<script defer data-domain="infosec.house" src="https://plausible.io/js/plausible.js"></script>
 </head>
